# simple-transformer

./: .gitignore  Cargo.toml
src/: dataset.rs  from_sparse.cu  from_sparse.rs  lsh.rs  main.rs  model.rs
