[package]
name = "simple-transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
# dfdx = { git = "https://github.com/M1ngXU/dfdx.git", branch = "more-public", features = [
#     "nightly",
#     "numpy",
# ] }
dfdx = { path = "../dfdx", features = ["nightly", "numpy"] }
cudarc = { git = "https://github.com/coreylowman/cudarc.git", branch = "dfdx-half", optional = true }
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
rust_tokenizers = "8.1.0"
num-traits = "0.2.15"
rand_distr = "0.4.3"
rayon = "1.7.0"
serde_json = "1.0.97"
bincode = "1.3.3"
flate2 = "1.0.26"

[features]
cudarc = ["dep:cudarc", "cudarc/cudnn"]
default = ["train"]
train = []
inference = []
test = []
save-data = []
cuda = ["dfdx/cuda", "dfdx/cudnn", "cudarc"]
